--- a/src/components/Resources.css
+++ b/src/components/Resources.css
@@ -12,7 +12,6 @@
   
   /* Hero Section */
   .resources-hero {
-    background-color: #3498db;
     color: white;
     padding: 3rem 10%;
     text-align: center;
@@ -27,6 +26,7 @@
     font-size: 1.1rem;
     max-width: 700px;
     margin: 0 auto;
+    color: #000000;
   }
   
   /* Category Filter */
